--- a/bad apple console/ConsoleMediaPlayer.csproj
+++ b/bad apple console/ConsoleMediaPlayer.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>bad_apple_console</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -16,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="System.Windows.Extensions" Version="5.0.0" />
     <PackageReference Include="Xabe.FFmpeg" Version="5.0.2" />
   </ItemGroup>
 
